--- a/page1.html
+++ b/page1.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>  </title>
-    <link rel="stylesheet" href="p1.css">
 </head>
 <body>
     <h1>Table num 2</h1>
-    <table>
+    <table border="2">
 <tr>
-<td>row1</td>
-<td>row1</td>
-<td>row1</td>
-
+<th>row1,2,col1</th>
+<td>row1,col2</td>
+<td>row 2,col4</td>
 </tr>
 <tr>
-    <td>row 2</td>
-    <td>row 2</td>
-    <td>row 2</td>
+    <td>row 2,col2</td>
+    <td>row 2,col4</td>
+    <td>row 2,col4</td>
 </tr>
 
 
